# cosmos-backend

./: .env.example  .gitignore  CLAUDE.md  README.md  output.md  pyproject.toml
.claude/: settings.json
.claude/agents/: agent-author.md  code-reviewer.md  db-architect.md  debugger.md  harness-builder.md  planner.md  prompt-engineer.md  route-author.md  test-author.md
.claude/commands/: add-section.md  check-harness.md  explain-chart-pipeline.md  fetch-docs.md  new-migration.md  run-backend.md
.claude/rules/: agent-pattern.md  harness-first.md  mcp-usage.md  route-pattern.md  sections-workflow.md  security.md  skills-and-subagents.md  testing.md
.claude/scripts/: bash-failure-hint.sh  stop-nudge.sh
app/: main.py
app/agents/: base_agent.py  event_predictor_agent.py  registry.py  varshaphal_agent.py
app/api/: analyses.py  charts.py  chat.py  compatibility.py  deps.py  predict.py  report.py  significators.py  timeline.py  varshaphal.py
app/core/: config.py  exceptions.py  logging_config.py  supabase.py
app/db/: queries.py
app/models/: analysis.py  chart.py  predict.py
app/services/: ashtakavarga_service.py  chart_service.py  compatibility_service.py  dasha_scanner.py  double_transit.py  load_service.py  muhurta_service.py  report_service.py  sadesati_service.py  significator_service.py  timeline_service.py  transit_service.py  varshaphal_service.py
docs/: api-reference.md
scripts/: test_flow.py
tests/: test_load_endpoint.py  test_swiss_calculator.py  test_swiss_parity.py  test_transit_guard.py  test_varshaphal_service.py
(+42 files in other folders)
